gibbon-compiler/examples/error/test00_error.sexp
#lang gibbon

(ann (error "foo") Int)
